fixed overlapping css, about and services which fucked up landing page and some other stuff. USE MULTIPLE CLASSES TO SPECIFY IN CSS

--- a/app/assets/stylesheets/pages/about.scss
+++ b/app/assets/stylesheets/pages/about.scss
@@ -1,5 +1,3 @@
-@import url("https://fonts.googleapis.com/css?family=Quicksand:400,500,700");
-
 .core {
   background-color: #fff;
   border-radius: 20px;
@@ -12,19 +10,23 @@
   float: none;
   padding: 40px;
   font-size: 20px;
-  font-family: "Quicksand", sans-serif;
   color: #555;
   line-height: 36px;
+}
+.about-wrapper {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.about-container {
+    background-color: #fff;
+    border-radius: 20px;
+    width: 50vw;
 }
 
 .card-text {
   font-family: "Roboto Condensed", sans-serif;
-}
-
-#h1-1 {
-  text-align: center;
-  margin-top: 192px;
-  color: white;
 }
 
 #h1-2 {
@@ -37,37 +39,22 @@
   height: 212px;
 }
 
-// .container-icon {
-//   display: flex;
-//   justify-content: space-evenly;
-//   margin: 30px;
-// }
-
 .h2-1 {
   margin-top: 40px;
-  // margin-left: -66px;
   color: white;
 }
 
 .h2-2 {
   margin-top: 40px;
-  // margin-left: -22px;
 }
 
 .h2-3 {
   margin-top: 40px;
-  // margin-left: -36px;
-}
-
-#h1-3 {
-  text-align: center;
-  margin-top: 60px;
 }
 
 .team {
   background-color: #fff;
   border-radius: 20px;
-  box-shadow: 0 10px 20px rgba(0, 0, 0, 0.19), 0 6px 6px rgba(0, 0, 0, 0.23);
   overflow: hidden;
   max-width: 100%;
   width: 400px;
@@ -123,6 +110,7 @@
   justify-content: space-evenly;
   margin-bottom: 50px;
   margin-top: 30px;
+  width: 80%;
 }
 
 .pages-about {
