--- a/app/assets/stylesheets/pages/services.scss
+++ b/app/assets/stylesheets/pages/services.scss
@@ -1,5 +1,3 @@
-@import url("https://fonts.googleapis.com/css?family=Quicksand:400,500,700");
-
 .services-box {
   background-color: #fff;
   border-radius: 20px;
@@ -11,7 +9,6 @@
   float: none;
   padding: 40px;
   font-size: 20px;
-  font-family: "Quicksand", sans-serif;
   color: #555;
   line-height: 36px;
   margin-top: 50px;
@@ -31,28 +28,4 @@
 .text-small {
   font-size: 20px;
   color: #555;
-}
-
-.btn {
-  margin: 15px 0;
-  text-transform: uppercase;
-  font-weight: 300;
-  letter-spacing: 2px;
-  font-size: 10px;
-  border-radius: 10px;
-  border: 1px solid transparent;
-}
-
-.h3 {
-  font-size: 20px;
-  font-weight: 600;
-  font-family: "Roboto Condensed", sans-serif;
-}
-
-h1,
-.h1 {
-  text-align: center;
-  margin-top: 30px;
-  color: white;
-  text-shadow: 7px 7px 10px #000000;
 }
